# automata

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
automaton/: index.html  sidebar-items.js
automaton/dfa/: index.html  sidebar-items.js
automaton/dfa/core/: DFABuilder.t.html  DFABuilding.t.html  DFAError.t.html  enum.DFAError.html  index.html  sidebar-items.js  struct.DFA.html  struct.DFABuilder.html  trait.DFABuilding.html  type.Result.html
automaton/dfa/reader/: DFAReader.t.html  DFAReaderError.t.html  enum.DFAReaderError.html  index.html  sidebar-items.js  struct.DFAReader.html  type.Result.html
automaton/e_nfa/: index.html  sidebar-items.js
automaton/e_nfa/core/: ENFA.t.html  ENFABuilder.t.html  ENFABuilding.t.html  ENFAError.t.html  enum.ENFAError.html  index.html  sidebar-items.js  struct.ENFA.html  struct.ENFABuilder.html  trait.ENFABuilding.html  type.Result.html
automaton/e_nfa/reader/: ENFAReader.t.html  ENFAReaderError.t.html  enum.ENFAReaderError.html  index.html  sidebar-items.js  struct.ENFAReader.html  type.Result.html
automaton/nfa/: index.html  sidebar-items.js
automaton/nfa/core/: NFABuilder.t.html  NFABuilding.t.html  NFAError.t.html  enum.NFAError.html  index.html  sidebar-items.js  struct.NFA.html  struct.NFABuilder.html  trait.NFABuilding.html  (+1 more)
data/: dfa1.txt  then1.txt  then2.txt
src/: lib.rs  main.rs
src/automata/: dfa.rs  mod.rs  reader.rs
src/automaton/: lib.rs.html
src/dfa/: core.rs  mod.rs  reader.rs
src/e_nfa/: core.rs  mod.rs  reader.rs
src/nfa/: .core.rs.swp  core.rs  mod.rs  reader.rs
(+21 files in other folders)
